--- a/Application/Invoicer/ClientApp/src/components/transaction/Transaction.css
+++ b/Application/Invoicer/ClientApp/src/components/transaction/Transaction.css
@@ -2,6 +2,34 @@
     font-size: 20px;
 }
 
+.transaction-company-dropdown-container {
+    justify-content: center;
+    display: flex;
+}
+
+.transaction-company-dropdown-container span {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.transaction-company-dropdown-container select {
+    min-width: 200px;
+}
+
 #due-payment-date {
     font-size: 20px;
+}
+
+.field-container {
+    padding: 20px 0px;
+}
+
+.info-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.transaction-information-table {
+    margin-bottom: 20px;
 }
