--- a/Application/Invoicer/ClientApp/src/custom.css
+++ b/Application/Invoicer/ClientApp/src/custom.css
@@ -11,6 +11,14 @@ code {
     border: none;
 }
 
+.remove-button {
+    color: rgba(0,0,0,1);
+    background-color: rgba(255, 158, 158);
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+}
+
 button {
     transition: opacity 0.7s ease-out;
 }
