--- a/Application/Invoicer/ClientApp/src/components/NavMenu.css
+++ b/Application/Invoicer/ClientApp/src/components/NavMenu.css
@@ -6,15 +6,16 @@
 
 .links-container {
     display: flex;
-    max-width: 500px ;
+    justify-content: center;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
 }
 
-    .links-container span {
-        margin-right: 10px;
-    }
+.links-container span {
+    margin-right: 20px;
+}
 
-    .links-container a {
-        color: rgba(0,0,0,1);
-    }
+.links-container a {
+    color: rgba(0, 125, 200,1);
+}
