--- a/Application/Invoicer/ClientApp/src/components/transaction/Transaction.css
+++ b/Application/Invoicer/ClientApp/src/components/transaction/Transaction.css
@@ -36,3 +36,23 @@
 #print-container a {
     color: rgba(0, 200, 255, 1);
 }
+
+.buttons-container {
+    margin-right: 100px;
+}
+
+@media only screen and (max-width: 1300px) {
+    .buttons-container {
+        text-align: center !important;
+    }
+
+    .field-label-input-container input {
+        max-width: 125px;
+    }
+    .field-label-input-container select {
+        width: 125px !important;
+    }
+    .field-label-input-container span:nth-child(1) {
+        margin-bottom: 10px;
+    }
+}
