--- a/Application/Invoicer/ClientApp/src/custom.css
+++ b/Application/Invoicer/ClientApp/src/custom.css
@@ -107,3 +107,23 @@ a:hover {
 [hidden] {
     display: none;
 }
+
+@media only screen and (max-width: 600px) {
+    span {
+        font-size: 18px;
+    }
+
+    select {
+        max-width: 200px;
+    }
+
+    .field-label-input-container {
+        font-size: 18px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .field-label-input-container input {
+        font-size: 18px;
+    }
+}
